objects/Restriction_Clearance_Request__c.object
<CustomObject>
    <fields>
        <fullName>All_Approved_Count__c</fullName>
        <formula>IF(  CONTAINS(TEXT( Clearance_Approval_Response__c ) , &quot;Approved&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Approved Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clean_Approved_Count__c</fullName>
        <formula>IF(ISPICKVAL( Clearance_Approval_Response__c , &quot;Approved&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clean Approved Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clearance_Approval_Response__c</fullName>
        <label>Clearance Approval Response</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved with Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved, but Internal Coordination Required Prior to Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted, Response Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Request Withdrawn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clearance_Approval_Response_text__c</fullName>
        <formula>text( Clearance_Approval_Response__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clearance Approval Response(text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clearance_Request_Comments__c</fullName>
        <label>Clearance Request Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Institution__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Restriction Clearance Requests</relationshipLabel>
        <relationshipName>Restriction_Clearance_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_User_is_Respondent__c</fullName>
        <description>Returns &apos;Yes&apos; if restriction owner or delegate is current user</description>
        <formula>if(or(Restriction__r.OwnerId = $User.Id , Restriction__r.Delegate__r.Id =$User.Id),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User is Respondent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateLastMarketingOutreachtoContact__c</fullName>
        <label>Date: Last Marketing Outreach to Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Research_Interaction__c</fullName>
        <description>Created as part of CR-7501</description>
        <label>Date: Last Research Interaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Respond__c</fullName>
        <formula>if((Response_Date__c - datevalue(CreatedDate) )&lt;0,0,Response_Date__c - datevalue(CreatedDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Respond</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Denied_Count__c</fullName>
        <formula>IF( ISPICKVAL( Clearance_Approval_Response__c , &quot;Denied&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Denied Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Restriction_Clearance_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notify_Creator_of_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to receive an email notification when the Clearance Approval Response on this request is changed.</inlineHelpText>
        <label>Notify Creator of Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Evaluations_for_this_Product__c</fullName>
        <label>Previous Evaluations for this Product</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA - Research Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Restriction Clearance Requests</relationshipLabel>
        <relationshipName>Restriction_Clearance_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Restriction Clearance Requests</relationshipLabel>
        <relationshipName>Restriction_Clearance_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Clearance_Request__c</fullName>
        <label>Reason for Clearance Request</label>
        <picklist>
            <picklistValues>
                <fullName>MA Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Call from Office of CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm Lead - General Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm Lead - Member Requested Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm Lead - OAB Lead Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Comments__c</fullName>
        <label>Response Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Within_1_Week_Count__c</fullName>
        <formula>IF( Days_to_Respond__c &lt;= 7, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Within 1 Week Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restriction_Delegate__c</fullName>
        <formula>Restriction__r.Delegate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Restriction Delegate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restriction_Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Restriction Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Restriction_Clearance_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restriction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Restriction</label>
        <referenceTo>Restrictions__c</referenceTo>
        <relationshipLabel>Restriction Clearance Requests</relationshipLabel>
        <relationshipName>Restriction_Clearance_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Interaction_Requested__c</fullName>
        <label>Type of Interaction Requested</label>
        <picklist>
            <picklistValues>
                <fullName>schedule visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>schedule PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite to Prospect Meeting/ Teleconference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warm_Lead_Type__c</fullName>
        <formula>IF( Warm_Lead__r.RecordType.Name = &quot;OAB&quot;, TEXT(Warm_Lead__r.Lead_Channel__c) + &quot; - Tier &quot; + TEXT(Warm_Lead__r.Grade__c) + &quot; - &quot; + TEXT(Warm_Lead__r.Qualification_Status__c), IF(Warm_Lead__r.RecordType.Name = &quot;Standard&quot;,  TEXT(Warm_Lead__r.Lead_Channel__c) + &quot; - Tier &quot; + TEXT(Warm_Lead__r.Grade__c) + &quot; - &quot; + TEXT(Warm_Lead__r.Attendee_Status__c), &quot;Not a Warm Lead&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warm Lead Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warm_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warm Lead</label>
        <referenceTo>Warm_Lead__c</referenceTo>
        <relationshipLabel>Restriction Clearance Requests</relationshipLabel>
        <relationshipName>Restriction_Clearance_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>When_Did_We_Last__c</fullName>
        <label>When Did We Last Introduce This Product?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Who_From_The_Member_Side_Was_Present__c</fullName>
        <label>Who From The Member Side Was Present?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_Did_the_Organization_Not_Join__c</fullName>
        <label>Why Did the Organization Not Join?</label>
        <type>TextArea</type>
    </fields>
    <label>Restriction Clearance Request</label>
    <listViews>
        <fullName>CCC_Vision_Clearances</fullName>
        <columns>NAME</columns>
        <columns>Contact_Institution__c</columns>
        <columns>Days_to_Respond__c</columns>
        <columns>Response_Date__c</columns>
        <columns>Restriction_Owner_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketer__c</field>
            <operation>equals</operation>
            <value>Nicole Latimer</value>
        </filters>
        <label>CCC Vision Clearances</label>
    </listViews>
    <listViews>
        <fullName>MA_Sample_Restriction_Clearance_Requests</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Restriction_Owner_2__c</columns>
        <columns>NAME</columns>
        <columns>Contact_Institution__c</columns>
        <columns>Reason_for_Clearance_Request__c</columns>
        <columns>Clearance_Approval_Response__c</columns>
        <columns>Response_Comments__c</columns>
        <columns>Days_to_Respond__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <label>MA Sample Restriction Clearance Requests</label>
        <sharedTo>
            <roleAndSubordinates>CCACOS</roleAndSubordinates>
            <roleAndSubordinates>ClinOpsCOS</roleAndSubordinates>
            <roleAndSubordinates>HCICITTICOS</roleAndSubordinates>
            <roleAndSubordinates>HECOS</roleAndSubordinates>
            <roleAndSubordinates>Intl_Lead</roleAndSubordinates>
            <roleAndSubordinates>NonBIMarketingLead</roleAndSubordinates>
            <roleAndSubordinates>PayNavICDCOS</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mannino_Restrictions</fullName>
        <columns>NAME</columns>
        <columns>Contact_Institution__c</columns>
        <columns>Contact__c</columns>
        <columns>Program__c</columns>
        <columns>Marketer__c</columns>
        <columns>Clearance_Approval_Response__c</columns>
        <columns>Response_Comments__c</columns>
        <columns>Restriction_Owner_2__c</columns>
        <columns>Restriction__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Restriction_Owner_2__c</field>
            <operation>contains</operation>
            <value>Mannino</value>
        </filters>
        <filters>
            <field>Clearance_Approval_Response__c</field>
            <operation>equals</operation>
            <value>&quot;Submitted, Response Pending&quot;</value>
        </filters>
        <label>Mannino Restrictions</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Requests_to_Clear</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Clearance_Request_Comments__c</columns>
        <columns>Clearance_Approval_Response__c</columns>
        <columns>Restriction_Owner_2__c</columns>
        <columns>Contact__c</columns>
        <columns>Warm_Lead__c</columns>
        <columns>Warm_Lead_Type__c</columns>
        <columns>Marketer__c</columns>
        <columns>Contact_Institution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_User_is_Respondent__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Clearance_Approval_Response__c</field>
            <operation>equals</operation>
            <value>&quot;Submitted, Response Pending&quot;</value>
        </filters>
        <label>Requests to Clear</label>
    </listViews>
    <listViews>
        <fullName>Requests_to_Clear1</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Clearance_Request_Comments__c</columns>
        <columns>Clearance_Approval_Response__c</columns>
        <columns>Restriction_Owner_2__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Institution__c</columns>
        <columns>Warm_Lead__c</columns>
        <columns>Warm_Lead_Type__c</columns>
        <columns>Marketer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clearance_Approval_Response__c</field>
            <operation>equals</operation>
            <value>&quot;Submitted, Response Pending&quot;</value>
        </filters>
        <label>Requests to Clear: All Departments</label>
    </listViews>
    <listViews>
        <fullName>Requests_to_Clear_Barimani</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Clearance_Request_Comments__c</columns>
        <columns>Clearance_Approval_Response__c</columns>
        <columns>Restriction_Owner_2__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Institution__c</columns>
        <columns>Warm_Lead__c</columns>
        <columns>Warm_Lead_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clearance_Approval_Response__c</field>
            <operation>equals</operation>
            <value>&quot;Submitted, Response Pending&quot;</value>
        </filters>
        <filters>
            <field>Restriction_Owner_2__c</field>
            <operation>contains</operation>
            <value>lemons,goossen,mccarthy,hockensmith,pacala,raghu</value>
        </filters>
        <label>Requests to Clear - Barimani</label>
    </listViews>
    <listViews>
        <fullName>Requests_to_Clear_Bitton</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Clearance_Request_Comments__c</columns>
        <columns>Clearance_Approval_Response__c</columns>
        <columns>Restriction_Owner_2__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Institution__c</columns>
        <columns>Warm_Lead__c</columns>
        <columns>Warm_Lead_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clearance_Approval_Response__c</field>
            <operation>equals</operation>
            <value>&quot;Submitted, Response Pending&quot;</value>
        </filters>
        <filters>
            <field>Restriction_Owner_2__c</field>
            <operation>contains</operation>
            <value>bitton,capuano,peffley,bastin</value>
        </filters>
        <label>Requests to Clear - Bitton</label>
    </listViews>
    <listViews>
        <fullName>Requests_to_Clear_Black</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Clearance_Request_Comments__c</columns>
        <columns>Clearance_Approval_Response__c</columns>
        <columns>Restriction_Owner_2__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Institution__c</columns>
        <columns>Warm_Lead__c</columns>
        <columns>Warm_Lead_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clearance_Approval_Response__c</field>
            <operation>equals</operation>
            <value>&quot;Submitted, Response Pending&quot;</value>
        </filters>
        <filters>
            <field>Restriction_Owner_2__c</field>
            <operation>contains</operation>
            <value>niehaus</value>
        </filters>
        <label>Requests to Clear - Niehaus</label>
    </listViews>
    <listViews>
        <fullName>Requests_to_Clear_Cooper</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Clearance_Request_Comments__c</columns>
        <columns>Clearance_Approval_Response__c</columns>
        <columns>Restriction_Owner_2__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Institution__c</columns>
        <columns>Warm_Lead__c</columns>
        <columns>Warm_Lead_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clearance_Approval_Response__c</field>
            <operation>equals</operation>
            <value>&quot;Submitted, Response Pending&quot;</value>
        </filters>
        <filters>
            <field>Restriction_Owner_2__c</field>
            <operation>contains</operation>
            <value>cooper,sweeny,fisher</value>
        </filters>
        <label>Requests to Clear - Cooper</label>
    </listViews>
    <listViews>
        <fullName>Requests_to_Clear_Farney</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Clearance_Request_Comments__c</columns>
        <columns>Clearance_Approval_Response__c</columns>
        <columns>Restriction_Owner_2__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Institution__c</columns>
        <columns>Warm_Lead__c</columns>
        <columns>Warm_Lead_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clearance_Approval_Response__c</field>
            <operation>equals</operation>
            <value>&quot;Submitted, Response Pending&quot;</value>
        </filters>
        <filters>
            <field>Restriction_Owner_2__c</field>
            <operation>contains</operation>
            <value>Gilfoy,Siegel</value>
        </filters>
        <label>Requests to Clear - Farney</label>
    </listViews>
    <listViews>
        <fullName>Requests_to_Clear_Harvey</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Clearance_Request_Comments__c</columns>
        <columns>Clearance_Approval_Response__c</columns>
        <columns>Restriction_Owner_2__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Institution__c</columns>
        <columns>Warm_Lead__c</columns>
        <columns>Warm_Lead_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clearance_Approval_Response__c</field>
            <operation>equals</operation>
            <value>&quot;Submitted, Response Pending&quot;</value>
        </filters>
        <filters>
            <field>Restriction_Owner_2__c</field>
            <operation>contains</operation>
            <value>Harvey</value>
        </filters>
        <label>Requests to Clear - Harvey</label>
    </listViews>
    <listViews>
        <fullName>Requests_to_Clear_Higher_Ed</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Clearance_Request_Comments__c</columns>
        <columns>Clearance_Approval_Response__c</columns>
        <columns>Restriction_Owner_2__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Institution__c</columns>
        <columns>Warm_Lead__c</columns>
        <columns>Warm_Lead_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clearance_Approval_Response__c</field>
            <operation>equals</operation>
            <value>&quot;Submitted, Response Pending&quot;</value>
        </filters>
        <filters>
            <field>Restriction_Owner_2__c</field>
            <operation>contains</operation>
            <value>healey,nobil,hallett,perez,schultz,norris</value>
        </filters>
        <label>Requests to Clear - Higher Ed</label>
    </listViews>
    <listViews>
        <fullName>Requests_to_Clear_Keeton</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Clearance_Request_Comments__c</columns>
        <columns>Clearance_Approval_Response__c</columns>
        <columns>Restriction_Owner_2__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Institution__c</columns>
        <columns>Warm_Lead__c</columns>
        <columns>Warm_Lead_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clearance_Approval_Response__c</field>
            <operation>equals</operation>
            <value>&quot;Submitted, Response Pending&quot;</value>
        </filters>
        <filters>
            <field>Restriction_Owner_2__c</field>
            <operation>contains</operation>
            <value>Bowling,cramer,gmelin,widing</value>
        </filters>
        <label>Requests to Clear - Keeton</label>
    </listViews>
    <listViews>
        <fullName>Requests_to_Clear_McDowell</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Clearance_Request_Comments__c</columns>
        <columns>Clearance_Approval_Response__c</columns>
        <columns>Restriction_Owner_2__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Institution__c</columns>
        <columns>Warm_Lead__c</columns>
        <columns>Warm_Lead_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clearance_Approval_Response__c</field>
            <operation>equals</operation>
            <value>&quot;Submitted, Response Pending&quot;</value>
        </filters>
        <filters>
            <field>Restriction_Owner_2__c</field>
            <operation>contains</operation>
            <value>mcdowell,jurivich</value>
        </filters>
        <label>Requests to Clear - McDowell</label>
    </listViews>
    <listViews>
        <fullName>Requests_to_Clear_McLaugh</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Clearance_Request_Comments__c</columns>
        <columns>Clearance_Approval_Response__c</columns>
        <columns>Restriction_Owner_2__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Institution__c</columns>
        <columns>Warm_Lead__c</columns>
        <columns>Warm_Lead_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clearance_Approval_Response__c</field>
            <operation>equals</operation>
            <value>&quot;Submitted, Response Pending&quot;</value>
        </filters>
        <filters>
            <field>Restriction_Owner_2__c</field>
            <operation>contains</operation>
            <value>mclaughlin,kanipe,pullins</value>
        </filters>
        <label>Requests to Clear - McLaugh</label>
    </listViews>
    <nameField>
        <label>Restriction Clearance Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Restriction Clearance Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_New_Request_on_Retired</fullName>
        <active>true</active>
        <description>New requests cannot be saved on a retired Restriction.</description>
        <errorConditionFormula>AND(
ISNEW(),
Restriction__r.Status__c = &apos;Retired&apos;
)</errorConditionFormula>
        <errorMessage>New requests cannot be saved on a retired Restriction.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restriction_Clearance_Dates_Required</fullName>
        <active>true</active>
        <description>Created as part of CR-7501. Please enter a value in either Date: Last Marketing Outreach to Contact or Date: Last Research Interaction before trying to save the record.</description>
        <errorConditionFormula>ISBLANK(DateLastMarketingOutreachtoContact__c) &amp;&amp;
ISBLANK(Date_Last_Research_Interaction__c)</errorConditionFormula>
        <errorMessage>Please enter a value in either Date: Last Marketing Outreach to Contact or Date: Last Research Interaction before trying to save the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restriction_Clearance_Marketer_Required</fullName>
        <active>true</active>
        <description>Created as part of CR-7501</description>
        <errorConditionFormula>NOT(ISPICKVAL(Reason_for_Clearance_Request__c, &quot;Research Request&quot;)) &amp;&amp; ISBLANK(Marketer__c)</errorConditionFormula>
        <errorDisplayField>Marketer__c</errorDisplayField>
        <errorMessage>Please enter a value in the Marketer field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_ValidateUserForNotifyCreatorOfRespons</fullName>
        <active>true</active>
        <description>CR-3014</description>
        <errorConditionFormula>AND(
                NOT(ISNEW()),
                $User.Id != CreatedById,
                ISCHANGED(Notify_Creator_of_Response__c)
)</errorConditionFormula>
        <errorDisplayField>Notify_Creator_of_Response__c</errorDisplayField>
        <errorMessage>This field can be updated only by record creator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Warm_Lead_Required</fullName>
        <active>true</active>
        <description>CR-20120924-1526</description>
        <errorConditionFormula>AND(
		CONTAINS(TEXT(Reason_for_Clearance_Request__c),&apos;Warm Lead&apos;), 
		OR(
			AND(
				ISNEW(),
				TODAY() &gt; DATE(2012,12,14)
			),
			DATEVALUE(CreatedDate) &gt; DATE(2012,12,14)
		),
		ISBLANK(Warm_Lead__c)
)</errorConditionFormula>
        <errorMessage>The &quot;Warm Lead&quot; field is required if the Reason for Clearance Request field contains &quot;Warm Lead&quot;.</errorMessage>
    </validationRules>
</CustomObject>